--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@reduxjs/toolkit": "^2.8.2",
     "bcryptjs": "^3.0.2",
     "react": "^19.1.1",
+    "react-content-loader": "^7.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
     "react-redux": "^9.2.0",
-    "react-router": "^7.8.2"
+    "react-router": "^7.8.2",
+    "sonner": "^2.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
